# MCP-Google_meet

./: .gitignore  README.md  pyproject.toml
config/: settings.json
docs/: setup-guide.md
docs/superpowers/plans/: 2026-03-18-mcp-meet-notes.md
docs/superpowers/specs/: 2026-03-17-mcp-meet-notes-design.md
scripts/: com.mcp-meet.sync.plist  first_auth.py  install_launchd.sh
skills/meet-analysis/: SKILL.md
src/: __init__.py  document_parser.py  drive_client.py  index_manager.py  markdown_writer.py  models.py  search.py  server.py  syncer.py
tests/: conftest.py  test_document_parser.py  test_drive_client.py  test_index_manager.py  test_markdown_writer.py  test_models.py  test_search.py  test_server.py  test_syncer.py
